--- a/list1.html
+++ b/list1.html
@@ -6,8 +6,8 @@ Ordered list
 </head>
 <body>
 <ol type ="A">
-<li> Milk </li>
-<li> Bread </li>
-<li> Butter </li>
-<li> Maggie </li>
+<li> cheese </li>
+<li> toast </li>
+<li> milk </li>
+<li> curd </li>
 </ol>
