--- a/list2.html
+++ b/list2.html
@@ -6,8 +6,8 @@ Unordered list
 </head>
 <body>
 <ul type ="square">
-<li> Milk </li>
-<li> Bread </li>
-<li> Butter </li>
-<li> Maggie </li>
+<li> cheese </li>
+<li> milk </li>
+<li> Butter milk </li>
+<li> curd </li>
 </ul>
