--- a/list3.html
+++ b/list3.html
@@ -6,8 +6,8 @@ Defination List
 </head>
 <body>
 <dl>
-<dt> Keyboard </dt>
+<dt> computer </dt>
 <dd> An input device </dd>
-<dt> Printer </dt>
+<dt> mouse </dt>
 <dd> An output device </dd>
 <dl>
