--- a/list4.html
+++ b/list4.html
@@ -6,18 +6,18 @@ Nested List
 </head>
 <body>
 <ol type="A">
-<li> Beverages </li>
+<li> drinks </li>
 <ul type ="square">
-<li> Hot coffee </li>
-<li> Cold coffee </li> 
-<li> Ice tea </li>
-<li> Juice </li>
+<li> cold drink </li>
+<li> cappuccino </li> 
+<li> hot coffee </li>
+<li> orange juice </li>
 </ul>
 <li> Food </li>
 <ul type="Square">
-<li> Pizza </li>
-<li> Pasta </li>
-<li> Burger </li>
+<li> momos </li>
+<li> Chole bhature </li>
+<li> pizza </li>
 </ul>
 </ol>
 </body>
