--- a/list1.html
+++ b/list1.html
@@ -6,8 +6,8 @@ Ordered list
 </head>
 <body>
 <ol type ="A">
-<li> cheese </li>
-<li> toast </li>
+<li> soaps </li>
+<li> detergent </li>
 <li> milk </li>
-<li> curd </li>
+<li> paneer </li>
 </ol>
