--- a/form.html
+++ b/form.html
@@ -1,16 +1,16 @@
 <html>
 <head>
-<title> FORM </title>
+<title> Basic Form </title>
 </head>
 <body>
 <form>
-<label> FIRST NAME: </label>
+<label> First Name: </label>
 <input type = "text" minlenght="5" maxlenght= "8" size= "12"></input><br><br>
-<label> LAST NAME:&nbsp</label>
+<label> Last Name:&nbsp</label>
 <input type = "text"  minlenght="5" maxlenght= "9" size= "12"></input><br><br>
-<label>  E-MAIL: &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp </label>
+<label> E-mail I'd: &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp </label>
 <input type = "text" minlenght="5" maxlenght= "8" size= "12"></input><br><br>
-<label> PASSWORD:&nbsp&nbsp  </label>
+<label> Password:&nbsp&nbsp  </label>
 <input type= "password" value="password" name="password" id ="password"  minlenght="5" maxlenght= "8" size= "12"</input><br><br>
 <input type= "submit" name="submit" value="submit"  </input><br><br>
 </form>
