Update and rename form3.html to Form2.html

--- a/Form2.html
+++ b/Form2.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title> FORM </title>
+<title> Forms </title>
 </head>
 <body>
-<h>Login To Your Account </h>
+<h> Login To Your Account </h>
 <form><br>
 <input type = "text" minlenght="5" maxlenght= "8" size= "12" placeholder="Username"></input><br><br>
 <input type= "password" value="password" name="password" id ="password"  minlenght="5" maxlenght= "8" size= "12" placeholder="password"</input><br><br>
