--- a/Form3.html
+++ b/Form3.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-<title> FORM </title>
+<title> Personal Form </title>
 </head>
 <body>
 <form>
-<label> FIRST NAME: </label>
+<label> First Name: </label>
 <input type = "text" minlenght="5" maxlenght= "8" size= "20" placeholder="Enter Your Name"></input><br><br>
-<label> YOUR AGE:&nbsp&nbsp&nbsp</label>
+<label> Your Age:&nbsp&nbsp&nbsp</label>
 <input type = "number" value="age" minlenght="5" maxlenght= "9" size= "10" placeholder="Enter Your Age"></input><br><br>
 <input type= "submit" name="submit" value="submit"  </input><br><br>
 </form>
