--- a/Table2.html
+++ b/Table2.html
@@ -35,7 +35,7 @@ H <br>
 </td>
 <td> SUB4 </td>
 <td> SUB5 </td>
-<td> Counselling class </td>
+<td> Counselling Class </td>
 </tr>
 <tr>
 <td> Tuesday </td>
@@ -53,7 +53,7 @@ H <br>
 <td>SUB2</td>
 <td>SWA</td>
 <td> ---- </td>
-<td colspan="3"> <center>  LAB </center> </td> 
+<td colspan="3"> <center>  Lab </center> </td> 
 </tr>
 <tr>
 <td> Thursday </td>
@@ -78,7 +78,7 @@ H <br>
 <tr>
 <td> Saturday </td>
 <td> SUB1 </td>
-<td colspan="3"> <center>  SEMINAR </center> </td> 
+<td colspan="3"> <center>  Seminar </center> </td> 
 <td> SUB4</td>
 <td> SUB5</td>
 <td> Library </td>
